add feteaure working

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
 
         <section class="operation">
-            <input id="add-x-input"> + <input id="add-y-input"> 
+            <input type="number" id="add-x-input"> + <input type="number" id="add-y-input"> 
             <button id="add-btn">=</button> 
             <span id="add-result">?</span>
         </section>
