--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
     </header>
     
     <main>
-
+        <!-- ADD-->
         <section class="operation">
             <input type="number" id="add-x-input"> + <input type="number" id="add-y-input"> 
             <button id="add-btn">=</button> 
             <span id="add-result">?</span>
+        </section>
+        <!--SUBTRACT-->
+        <section class="operation">
+            <input type="number" id="subtract-x-input"> - <input type="number" id="subtract-y-input"> 
+            <button id="subtract-btn">=</button> 
+            <span id="subtract-result">?</span>
         </section>
         
     </main>
