--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             <button id="subtract-btn">=</button> 
             <span id="subtract-result">?</span>
         </section>
+         <!--MULTIPLY-->
+         <section class="operation">
+            <input type="number" id="multiply-x-input"> * <input type="number" id="multiply-y-input"> 
+            <button id="multiply-btn">=</button> 
+            <span id="multiply-result">?</span>
+        </section>
         
     </main>
 
