division feature added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
             <button id="multiply-btn">=</button> 
             <span id="multiply-result">?</span>
         </section>
+         <!--DIVIDE-->
+         <section class="operation">
+            <input type="number" id="devide-x-input"> / <input type="number" id="devide-y-input"> 
+            <button id="devide-btn">=</button> 
+            <span id="devide-result">?</span>
+        </section>
         
     </main>
 
