modulo feature included

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             <button id="devide-btn">=</button> 
             <span id="devide-result">?</span>
         </section>
+         <!--MODULO-->
+         <section class="operation">
+            <input type="number" id="modulo-x-input"> % <input type="number" id="modulo-y-input"> 
+            <button id="modulo-btn">=</button> 
+            <span id="modulo-result">?</span>
+        </section>
         
     </main>
 
