--- a/index.html
+++ b/index.html
@@ -48,7 +48,18 @@
             <button id="modulo-btn">=</button> 
             <span id="modulo-result">?</span>
         </section>
-        
+        <!--INTEGER-->
+        <section class="operation">
+            <input type="number" id="integer-x-input"> \\ <input type="number" id="integer-y-input"> 
+            <button id="integer-btn">=</button> 
+            <span id="integer-result">?</span>
+        </section>
+        <!--P.. THEOREM OR PT-->
+        <section class="operation">
+           <input type="number" id="pt-a-input"> + <input type="number" id="pt-b-input"> 
+            <button id="pt-btn">=</button> 
+            <span id="pt-result">?</span>
+        </section>
     </main>
 
     <footer>
